Fixed bugs on header, updated styling
* Added icons for navigation links for mobile

* Added exit icon for menu button

* Displayed icons to none for desktop

* Added aria-label for navigation menu

* Changed variable name

* Added invisible text for burger menu button

* Added text content for menu button

* Created try..catch statement

* Created temporary try/catch

* Created new error messages

* Created try/catch function

* Added container for error message

* Created README.md

* Added mvp

* Updated features

* Created function that filters recipes based on search input

* Created search function

* Added debounce

* Reorganized the code

* Commented out Instruction button module

* Commented the code using JSDoc

* Added @todo

* Updated todo

* Created navigation for mobile

* Added if statement for search container

* Imported and created header module

* Created the logic for mobile navigation

* Created no scroll class

* Added no scroll function on navigation

* Commented code

* Removed search button from header

* Removed search button from navigation

* Styled navigation for mobile version

* Updated demo link

* Feature: recipe roulette (#23)

* Created markup for recipe roulette

* Created modules

* Removed todo

* Rendered random recipe to recipe roulette

* Created blur modifier

* Imported module

* Added classes

* Changed variable name

* Added grid column start for desktop

* Added background color for recipe card

* Added grid classes for mobile

* Added recipe roulette section

* Styled recipe roulette section

* Added blur effect for safari

* Fixed so the function work for search button and enter key

* Added class to search button

* Added event listener to enter key & search button

* Fixed styling

* Changed class name

* Added hover effect for active favorite button

* Created module for favorite button

* Imported module

--- a/_app/css/modules/header.css
+++ b/_app/css/modules/header.css
@@ -17,16 +17,16 @@
 	padding: var(--gap-margin-small);
 }
 
-.main-header__search-button,
-.main-header__mobile-burger-button, .main-header__mobile-search-button {
+.main-header__mobile-burger-button {
 	width: 1.4rem;
 	height: 1.4rem;
 }
 
 .main-header__mobile-burger-button {
-	background-image: url(/_app/assets/icons/menu.svg);	
+	background-image: url(/_app/assets/icons/menu-2.svg);
+	background-repeat: no-repeat;	
+	color: transparent;
 }
-
 
 .main-header__menu {
 	display: none;
@@ -45,27 +45,20 @@
 	font-size: 25px;
 }
 
-.main-header__menu--visible a::after {
-	content: '';
-	background-image: url('/_app/assets/icons/chevron-right.svg');
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center;
-	width: 3rem;
-	height: 3rem;
-}
-
-.main-header__menu--visible a {
-	/* border: 1px solid #000; */
-	width: 100%;
-}
-
-.main-header__menu a{
+.main-header__link {
 	margin-top: var(--gap-margin-small);
 	transition: all 300ms ease-in-out;
 }
 
-.main-header__mobile-buttons button{
+.main-header__menu--visible .main-header__link {
+	width: 100%;
+}
+
+.main-header__link--active {
+	border-bottom: 3px solid;
+}
+
+.main-header__mobile-button button{
 	margin: var(--gap-margin-small);
 }
 
@@ -85,17 +78,11 @@
 		margin-right: var(--gap-margin-small);
 	}
 
-	.main-header__menu a:hover {
+	.main-header__menu .main-header__link:hover {
 		border-bottom: 3px solid;
 	}
 
-	.main-header__mobile-buttons {
+	.main-header__mobile-button {
 		display: none;
 	}
-
-	.main-header__search-button {
-		display: block;
-	}
 }
-
-/* Todo: finn ut hvorfor navigation menu flytter på seg */
